--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background: url('gym.jpg');
+        background: url("gym.jpg");
         background-repeat: no-repeat;
         background-size: 1598px;
         
