--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <header class="header">
         <!--Left box for logo -->
         <div class="left">
-            <img src="/gym.png" alt="">
+            <img src="gym.png" alt="">
             <div>Mulayam Fitness</div>
         </div>
         <!--Mid box for navbar -->
